--- a/admin/.htaccess
+++ b/admin/.htaccess
@@ -1,6 +1,3 @@
-RewriteEngine on
-#enables you to access PHP files with HTML extension
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^$ php-version/index.php [L]
-RewriteRule ^(.*)\.html$ php-version/$1.php [NC]
+php_flag display_errors on 
+php_value error_reporting 7
+
